# cppdlr

./: .clang-tidy  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.build  Jenkinsfile  LICENSE.txt  README.md  issue_summary.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml  draft-pdf.yml
c++/app4triqs/: CMakeLists.txt  app4triqs.cpp  app4triqs.hpp
c++/cppdlr/: CMakeLists.txt  cppdlr.cpp  cppdlr.hpp  dlr_basis.cpp  dlr_basis.hpp  dlr_build.cpp  dlr_build.hpp  dlr_dyson.hpp  dlr_imfreq.cpp  dlr_imfreq.hpp  dlr_imtime.cpp  dlr_imtime.hpp  dlr_kernels.cpp  dlr_kernels.hpp  utils.cpp  utils.hpp
doc/: CMakeLists.txt  ChangeLog.md  Doxyfile.in  DoxygenLayout.xml  about.rst  background.rst  conf.py.in  documentation.rst  examples.rst  index.rst  install.rst  issues.rst
doc/_templates/: autosummary_class_template.rst  sideb.html
doc/doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  documentation.md  ex1.md  examples.md  groups.dox  installation.md  integration.md  overview.md.in
doc/plot_scripts/: dlr_interpolation_plot.m
docs/: .buildinfo  ChangeLog.html  background.html  documentation.html  examples.html  genindex.html  index.html  install.html  issues.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: ChangeLog.doctree  background.doctree  documentation.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree  issues.doctree
docs/.doctrees/cpp2rst_generated/: contents.doctree  cppdlr.doctree
docs/1.0.x/: .buildinfo  ChangeLog.html  background.html  documentation.html  examples.html  genindex.html  index.html  install.html  issues.html  search.html  searchindex.js
docs/1.0.x/.doctrees/: ChangeLog.doctree  background.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree
docs/1.0.x/_sources/: background.rst.txt  issues.rst.txt
docs/1.1.x/: ChangeLog.html  background.html  genindex.html  install.html  search.html  searchindex.js
docs/1.1.x/.doctrees/: ChangeLog.doctree  environment.pickle  index.doctree
docs/1.1.x/_sources/: ChangeLog.md.txt  examples.rst.txt
docs/1.2.x/: ChangeLog.html  background.html  documentation.html  examples.html  genindex.html  index.html  install.html  search.html  searchindex.js
docs/1.2.x/.doctrees/: ChangeLog.doctree  environment.pickle  issues.doctree
docs/1.2.x/_sources/: background.rst.txt  index.rst.txt  install.rst.txt  issues.rst.txt
docs/1.3.x/: .buildinfo  background.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/1.3.x/.doctrees/: ChangeLog.doctree  background.doctree  documentation.doctree  environment.pickle  index.doctree
docs/1.3.x/_sources/: ChangeLog.md.txt  documentation.rst.txt  index.rst.txt
docs/_sources/: ChangeLog.md.txt  background.rst.txt  examples.rst.txt  index.rst.txt
docs/_sources/cpp2rst_generated/: contents.rst.txt  cppdlr.rst.txt
docs/cpp2rst_generated/: contents.html  cppdlr.html
docs/cpp2rst_generated/cppdlr/: abs2rel.html  adapgl.html  arraymult.html  barycheb.html  build_dlr_rf.html  build_it_fine.html  build_k_if.html  build_k_it.html  build_rf_fine.html  dyson_it.html  eqptsrel.html  fineparams.html  free_gf.html  gaussquad.html  geterr_k_it.html  imfreq_ops.html  imtime_ops.html  k_if.html  k_it.html  k_it_abs.html  leg_eval.html  make_common_helper.html  pivrgs.html  rel2abs.html
docs/doxygen/html/: annotated.html  classcppdlr_1_1barycheb-members.html  classcppdlr_1_1barycheb.html  classcppdlr_1_1dyson__it-members.html  classcppdlr_1_1dyson__it.html  classcppdlr_1_1fineparams-members.html  classcppdlr_1_1fineparams.html  classcppdlr_1_1imfreq__ops-members.html  classcppdlr_1_1imfreq__ops.html  classcppdlr_1_1imtime__ops-members.html  classcppdlr_1_1imtime__ops.html  classes.html  cppdlr_8hpp.html  cppdlr_8hpp_source.html  dir_4fcfbf5e6cac7305afbbc72136e29a45.html  dir_b2bca091c87127f5da307455ce418719.html  dlr__build_8cpp.html  dlr__build_8hpp.html  dlr__build_8hpp_source.html  dlr__dyson_8hpp.html  dlr__dyson_8hpp_source.html  dlr__imfreq_8cpp.html  dlr__imfreq_8hpp.html  dlr__imfreq_8hpp_source.html  dlr__imtime_8cpp.html  dlr__imtime_8hpp.html  dlr__imtime_8hpp_source.html  dlr__kernels_8cpp.html  dlr__kernels_8hpp.html  dlr__kernels_8hpp_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  index.html  menudata.js  namespacecppdlr.html  namespacemembers.html  (+10 more)
docs/doxygen/latex/: annotated.tex  classcppdlr_1_1barycheb.tex  classcppdlr_1_1dyson__it.tex  classcppdlr_1_1fineparams.tex  classcppdlr_1_1imfreq__ops.tex  classcppdlr_1_1imtime__ops.tex  cppdlr_8hpp.tex  cppdlr_8hpp_source.tex  dir_4fcfbf5e6cac7305afbbc72136e29a45.tex  dir_b2bca091c87127f5da307455ce418719.tex  dlr__build_8cpp.tex  dlr__build_8hpp.tex  dlr__build_8hpp_source.tex  dlr__dyson_8hpp.tex  dlr__dyson_8hpp_source.tex  dlr__imfreq_8cpp.tex  dlr__imfreq_8hpp.tex  dlr__imfreq_8hpp_source.tex  (+14 more)
docs/main/: .buildinfo  ChangeLog.html  background.html  documentation.html  examples.html  genindex.html  index.html  install.html  issues.html  objects.inv  search.html  searchindex.js
examples/: CMakeLists.txt  dlr_interpolation.cpp
jenkins/: Dockerfile  Jenkinsfile
joss/: cppdlr_joss.md  paper.bib  paper.md  ref.bib
packaging/: Dockerfile.msan  TRIQS-app4triqs-3.1.0-foss-2021b.eb  TRIQS-app4triqs-foss-2021b.eb.in  TRIQS-cppdlr-3.1.0-foss-2021b.eb
packaging/conda/: meta.yaml
python/app4triqs/: CMakeLists.txt  __init__.py  module.cpp  module.toml  module.wrap.cxx  module.wrap.hxx  module_desc.py
share/: CMakeLists.txt  app4triqs.modulefile.in  app4triqsvars.sh.in  cppdlr.modulefile.in  cppdlrvars.sh.in
share/cmake/: cppdlr-config.cmake.in  extract_flags.cmake
test/c++/: CMakeLists.txt  adapint.cpp  arraymult.cpp  barycheb.cpp  baryinterp.cpp  basic.cpp  dlr_basis.cpp  dlr_build.cpp  dlr_imtime.cpp  dyson_it.cpp  eqptsrel.cpp  imfreq_ops.cpp  imtime_ops.cpp  pivrgs.cpp  print_ranks.cpp  symcompare.cpp  symcompare_if.cpp  symcompare_it.cpp
test/python/: Basic.py  CMakeLists.txt
(+602 files in other folders)
